changed name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maeganwomble/contacts",
+    "name": "maeganwomble/contacts2",
     "description": "Contacts Pacakge",
     "type": "project",
     "authors": [
